# change.hs

./: .gitignore  COPYING  change.cabal
src/Change/: Bell.hs  Row.hs
src/Data/Change/: Bell.hs  Row.hs
src/Data/Change/Row/: Parity.hs
testsuite/tests/Change/: BellTest.hs
testsuite/tests/Data/Change/: BellTest.hs
