name:           change
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
license:        LGPL-2.1
license-file:   LICENSE
copyright:      Copyright (C) 2013  Leigh Simpson <code@simpleigh.com>
author:         Leigh Simpson <code@simpleigh.com>
maintainer:     Leigh Simpson <code@simpleigh.com>
stability:      alpha
synopsis:       Change-ringing library for Haskell

library
  exposed-modules: Change.Bell,
                   Change.Row
  build-depends:   base >= 4
  hs-source-dirs:  src
  ghc-options:     -Wall

test-suite Bell
  type:            exitcode-stdio-1.0
  main-is:         Change/BellTest.hs
  build-depends:   base >= 4, HTF > 0.9, Cabal
  other-modules:   Change.Bell
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts
